fixed a z-index bug, set up qr code displaying for LN payments

--- a/public/main.css
+++ b/public/main.css
@@ -390,10 +390,16 @@ input {
 
 .filepond--root{
   margin-bottom: 0 !important;
+  
 }
 
 #filepond-container{
   position: relative;
+}
+
+.filepond-container-behind{
+  position: relative;
+  z-index: -1000;
 }
 
 #message-image{
